--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cb2148a
-	base = 4cc47aa
-	trim = 
-	trimbase = 
+	base = 690eacd
+	trim = rclc
+	trimbase = 4cc47aa
