--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cb2148a
-	base = c8165b2
-	trim = 
-	trimbase = 
+	base = 7dc2400
+	trim = rclc_parameter
+	trimbase = c8165b2
