--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cb2148a
-	base = 34ee349
-	trim = 
-	trimbase = 
+	base = e7a41e8
+	trim = rclc_lifecycle
+	trimbase = 34ee349
