--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = cb2148a
-	base = 36838b0
-	trim = 
-	trimbase = 
+	base = 6f0cca7
+	trim = rclc_examples
+	trimbase = 36838b0
