--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rclc_lifecycle
-	previous = 
-	base = 9dd7911
+	previous = 9dd7911
+	base = 5bb574a
 	trim = 
 	trimbase = 
