--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rclc
-	previous = 
-	base = 7304aa0
+	previous = 7304aa0
+	base = e72dc39
 	trim = 
 	trimbase = 
