--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rclc_parameter
-	previous = 
-	base = 7dc2400
+	previous = 7dc2400
+	base = d753d40
 	trim = 
 	trimbase = 
