--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rclc_parameter
-	previous = 
-	base = 618abe3
+	previous = 618abe3
+	base = 33c8264
 	trim = 
 	trimbase = 
