--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rclc_examples
-	previous = 
-	base = 7c6fcda
+	previous = 7c6fcda
+	base = cad0d24
 	trim = 
 	trimbase = 
