--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rclc
-	previous = 
-	base = 690eacd
+	previous = 690eacd
+	base = b7a69bf
 	trim = 
 	trimbase = 
