--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rclc_lifecycle
-	previous = 
-	base = e7a41e8
+	previous = e7a41e8
+	base = 809e6dd
 	trim = 
 	trimbase = 
