--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rclc_lifecycle
-	previous = 
-	base = 007e678
+	previous = 007e678
+	base = 14dc8d6
 	trim = 
 	trimbase = 
