--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rclc_examples
-	previous = 
-	base = 6f0cca7
+	previous = 6f0cca7
+	base = 8a03f56
 	trim = 
 	trimbase = 
