--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rclc_examples
-	previous = 
-	base = 3cec926
+	previous = 3cec926
+	base = 7f3800f
 	trim = 
 	trimbase = 
