--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rclc_parameter
-	previous = 
-	base = fae854b
+	previous = fae854b
+	base = 32a4e27
 	trim = 
 	trimbase = 
